Revision history for {{$dist->name}}

{{$NEXT}}

2.100921  2010-04-02 16:04:57 America/New_York
          add the missing ->ensure_built method

2.100920  2010-04-02 10:45:45 America/New_York
          BeforeArchive plugins introduced (thanks, Graham Barr)
          PkgVersion now puts version declaration in a BEGIN block
          fix required version of Config::MVP
          include recommendations in distmeta

2.100880  2010-03-29 10:00:20 America/New_York
          first non-dev release of version 2

2.100870  2010-03-28 17:07:24 America/New_York

2.100862  2010-03-27 13:32:01 America/New_York

2.100861  2010-03-27 13:17:23 America/New_York
          INCOMPATIBLE CHANGES:

          the AllFiles plugin is now known as GatherDir

          the InstallDirs plugin has been replaced by ExecDir and ShareDir

          the PodTests plugin has been replaced by PodCoverageTests and
          PodSyntaxTests

          the FixedPrereq role is replaced with PrereqSource

          OTHER CHANGES:

          numerous improvements to testing libraries
          ...and numerous actual tests!

          added include_dotfiles option to GatherDir
          allow relative root directory for GatherDir

          AutoPrereq is now distributed with Dist::Zilla

          AutoPrereq will make requirements only found in ./t "build_requires"

          ConfirmRelease plugin added and made part of @Classic (dagolden)

          MakeMaker-produced Makefile.PL will produce warnings less often
          
          MakeMaker-produced Makefile.PL will require v6.31 for INSTALL_BASE

          Prereq plugin can target config_requires, build_requires, etc

          dzil takes -v arg to enable debugging globally or per-plugin

          PkgVersion now adds a fully-qualified $VERSION variables, not 'our'

          PruneCruft prunes MYMETA.yml

          add 'dzil nop' command to initialize zilla object and exit

1.100711  2010-03-12 12:51:55 America/New_York